fix/list_history